--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,19 +1,12 @@
-<html>
-<head>
-<title>my-first-blog</title>
-</head>
-<body>
-<div>
-<h1><a href="https://ycode.pythonanywhere.com">visit online website</a></h1>
+{% extends 'blog/base.html' %}
+{% block content %}
+{% for post in posts %}
+<div class="post">
+<div class="date">
+<p>published: {{ post.published_date }}</p>
 </div>
-<div>
-  {% for post in posts %}
-  <div>
-    <p> published:{{post.published_date}}</p>
-    <h2><a href="">{{post.title}}</a></h2>
-    <p> {{post.text|linebreaksbr}}</p>
-  </div>
-  {% endfor %}
+<h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+<p>{{ post.text|linebreaksbr }}</p>
 </div>
-</body>
-</html>
+{% endfor %}
+{% endblock %}
