--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,10 @@
     {{post.published_date}}
   </div>
     {% endif %}
+    {% if user.is_authenticated %}
+    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+    {% endif %}
     <h2> {{post.title}}</h2>
     <p> {{post.text|linebreaksbr}}</p>
   </div>
-{% endblock %}  
+{% endblock %}
