--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,46 +1,92 @@
-h1 a, h2 a {
-  color: #C25100;
-  font-family: 'Lobster';
-}
-body {
-  padding-left: 15px;
+body { 
+    margin:0;
+    padding:0;
+    font-family:helvetica, sans-serif; 
 }
 
-.page-header {
-  background-color: C25100;
-  margin-top: 0;
-  padding: 20px 20px 20px 40px;
+a { 
+    color:#00abff;
+    text-decoration:none; 
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active{
-  color: #ffffff;
-  font-size: 30pt ;
-  text-decoration: none;
+h1 { 
+    font-weight:normal;
+    border-bottom:1px solid #bbb;
+    padding:0 0 10px 0;
 }
-.content {
-  margin-left: 40px;
+
+h2 {
+    font-weight:normal;
+    margin:30px 0 0;
 }
-h1, h2, h3, h4 {
-  font-family: 'Lobster',cursive;
+
+#content { 
+    float:left;
+    width:60%;
+    padding:0 0 0 30px; 
 }
-.date {
-  color: #828282
+
+#sidebar { 
+    float:right;
+    width:30%;
+    padding:10px;
+    background:#efefef; 
+    height:100%;
 }
-.save {
-  float: right;
+
+p.date { 
+    color:#ccc;
+    font-family: georgia, serif;
+    font-size: 12px;
+    font-style: italic; 
 }
-.post-form textarea, .post-form input {
-  width: 100%;
+
+/* pagination */
+.pagination { 
+    margin:40px 0; 
+    font-weight:bold;
 }
-.top-menu, .top-menu:hover, .top-menu-visited {
-  color: #ffffff;
-  float: right;
-  font-size: 26pt ;
-  margin-right: 20px;
+
+/* forms */
+label { 
+    float:left;
+    clear:both;
+    color:#333;
+    margin-bottom:4px; 
 }
-.post{
-  margin-bottom: 70px;
+input, textarea { 
+    clear:both;
+    float:left;
+    margin:0 0 10px;
+    background:#ededed;
+    border:0;
+    padding:6px 10px;
+    font-size:12px;
 }
-.post h2 a, .post h2 a:visited{
-  color: #000000;
+input[type=submit] {
+    font-weight:bold;
+    background:#00abff;
+    color:#fff;
+    padding:10px 20px;
+    font-size:14px;
+    text-transform:uppercase; 
+}
+.errorlist { 
+    color:#cc0033;
+    float:left;
+    clear:both;
+    padding-left:10px; 
+}
+
+/* comments */
+.comment {
+    padding:10px;
+}
+.comment:nth-child(even) {
+    background:#efefef;
+}
+.comment .info {
+    font-weight:bold;
+    font-size:12px;
+    color:#666;
 }
