--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,27 +1,19 @@
 {% load static %}
+<! DOCTYPE html>
 <html>
 <head>
-<title>my-first-blog</title>
-<link rel = "stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.theme.min.css">
-<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-
+<title>{% block title %}
+{% endblock %}</title>
+<link href="{% static 'css/blog.css' %}" rel="stylesheet">
 </head>
 <body>
-  <div class="page-header">
-    {% if user.is_authenticated %}
-    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon-plus"></span></a>
-    {% endif %}
-    <h1> <a href="/">Django </a></h1>
-  </div>
-  <div class="content container">
-    <div class="row">
-      <div class="col-md-8">
-        {% block content %}
-        {% endblock %}
-      </div>
-    </div>
-  </div>
+  <div id="content">
+    {% block content %}
+    {% endblock %}
+   </div>
+   <div id = "sidebar">
+   	<h2>My Blog</h2>
+   	<p>This is my blog.</p>
+   </div>
 </body>
 </html>
